<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.1" />

    <EditText
        android:id="@+id/login_registration_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholder_login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_reg"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_registration_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_registration_tv"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password_registration_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:ems="10"
        android:hint="@string/placeholder_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_registration_tv"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password_registration_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_confirm_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_registration_tv"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/reg_sign_in_btn"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/auth_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_registration_tv" />

    <Button
        android:id="@+id/reg_restore_pass_btn"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_in"
        app:layout_constraintEnd_toEndOf="@+id/reg_sign_in_btn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/reg_sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/reg_sign_in_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>