<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_confirm_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/label_new_pass"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent"
        android:gravity="center"
        android:text="@string/label_new_pass"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_confirm_code"
        tools:text="@string/label_new_pass" />

    <EditText
        android:id="@+id/confirm_code_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:ems="10"
        android:hint="@string/placeholder_code"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_new_pass"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_code_password_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:ems="10"
        android:hint="@string/placeholder_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_code_tv"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_code_confirm_password_tv"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_confirm_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_code_password_tv"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/restore_pass_btn"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_btn"
        app:iconTint="@color/snackColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_code_confirm_password_tv" />




</androidx.constraintlayout.widget.ConstraintLayout>