<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView4"
        style="@style/LabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_big"
        android:text="@string/placeholder_task_time_start"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/LabelDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/placeholder_task_time_end"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/set_start_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_double"
        android:text="@string/hint_time"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/set_end_time_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_time"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/set_start_time_btn"
        app:layout_constraintStart_toStartOf="@+id/set_start_time_btn"
        app:layout_constraintTop_toTopOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>