<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_img3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_679976041_3_41"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/task_name_et"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginEnd="@dimen/space_double"
        android:ems="10"
        android:hint="@string/placeholder_task_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_img3" />

    <Spinner
        android:id="@+id/task_minutes_sp"
        style="@style/Spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_large"
        android:layout_marginTop="@dimen/space_small"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/task_minutes_tv" />

    <Spinner
        android:id="@+id/task_hours_sp"
        style="@style/Spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_large"
        android:layout_marginTop="@dimen/space_small"
        android:dropDownWidth="match_parent"
        android:dropDownSelector="@drawable/border_radius_negativ"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_hour_tv" />

    <Spinner
        android:id="@+id/task_priority_sp"
        style="@style/Spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_large"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_double"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/task_hour_tv"
        style="@style/LabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hours"
        app:layout_constraintEnd_toEndOf="@+id/task_hours_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_et" />

    <TextView
        android:id="@+id/task_minutes_tv"
        style="@style/LabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/task_minutes_sp"
        app:layout_constraintTop_toBottomOf="@+id/task_name_et" />

    <TextView
        android:id="@+id/textView5"
        style="@style/LabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_priority"
        app:layout_constraintEnd_toEndOf="@+id/task_priority_sp"
        app:layout_constraintStart_toStartOf="@+id/task_priority_sp"
        app:layout_constraintTop_toBottomOf="@+id/task_minutes_sp" />

    <Button
        android:id="@+id/del_task_btn"
        style="@style/ButtonDialogNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_double"
        android:text="@string/label_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_priority_sp" />

</androidx.constraintlayout.widget.ConstraintLayout>